--- a/pages/_sass/_navigation.scss
+++ b/pages/_sass/_navigation.scss
@@ -119,6 +119,9 @@ div.toc {
   .wrapper.sidebar {
     flex-wrap: wrap;
   }
+  .navside {
+    margin-bottom: 2rem;
+  }
 }
 
 .navside {
